OMNC-234: Update, duplicate and delete a user.